--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 databases:
-  - name: rails_auth_starter
-    databaseName: rails_auth_starter
-    user: rails_auth_starter
+  - name: trading_app
+    databaseName: trading_app
+    user: trading_app
     plan: free
 
 services:
   - type: web
-    name: rails_auth_starter
+    name: trading_app
     runtime: ruby
     plan: free
     buildCommand: "bin/render-build.sh"
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: rails_auth_starter
+          name: trading_app
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
