--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.4",
+    "@stimulus-components/chartjs": "^6.0.0",
     "autoprefixer": "latest",
+    "chart.js": "^4.4.2",
+    "chartkick": "^5.0.1",
     "esbuild": "^0.20.2",
     "hotkeys-js": "^3.13.7",
     "postcss": "latest",
