--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.4",
+    "@stimulus-components/auto-submit": "^6.0.0",
     "autoprefixer": "latest",
     "esbuild": "^0.20.2",
     "hotkeys-js": "^3.13.7",
     "postcss": "latest",
     "stimulus-use": "^0.52.2",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss": "latest"
   },
   "devDependencies": {
